--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,9 @@
   "type": "typo3-cms-extension",
   "description": "Log 404 errors for BE users to easily create redirects",
   "require": {
-    "php": "^7.2||^7.3||^7.4||^8.0",
-	  "typo3/cms-core": "^9.5",
-	  "typo3/cms-redirects": "^9.5",
-	  "lochmueller/autoloader": "^6.0"
+    "php": "^8.1",
+	  "typo3/cms-core": "^12.4",
+	  "typo3/cms-redirects": "^12.4"
   },
   "autoload": {
     "psr-4": {
