--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
   },
   "extra": {
     "typo3/cms": {
+      "extension-key": "error_log",
       "cms-package-dir": "{$vendor-dir}/typo3/cms",
       "web-dir": ".Build/Web"
     }
