--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,9 @@
   "description": "Log 404 errors for BE users to easily create redirects",
   "require": {
     "php": "^8.1",
-	  "typo3/cms-core": "^12.4",
-	  "typo3/cms-redirects": "^12.4"
+    "typo3/cms-core": "^12.4",
+    "typo3/cms-extbase": "*",
+    "typo3/cms-redirects": "*"
   },
   "autoload": {
     "psr-4": {
@@ -23,7 +24,6 @@
   "extra": {
     "typo3/cms": {
       "extension-key": "error_log",
-      "cms-package-dir": "{$vendor-dir}/typo3/cms",
       "web-dir": ".Build/Web"
     }
   }
