--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
   "description": "Log 404 errors for BE users to easily create redirects",
   "require": {
     "php": "^8.1",
-    "typo3/cms-core": "^12.4",
-    "typo3/cms-extbase": "*",
-    "typo3/cms-redirects": "*"
+    "typo3/cms-core": "^12.4||^13.4",
+    "typo3/cms-extbase": "^12.4||^13.4",
+    "typo3/cms-redirects": "^12.4||^13.4"
   },
   "autoload": {
     "psr-4": {
